# genshin_auto

./: .gitignore  Cargo.toml  LICENSE  build.rs  readme.md
src/: main.rs
